--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,7 @@
 {
-    "name": "bitnami/htdocs",
     "autoload": {
-        "psr-4": {
-            "Bitnami\\Htdocs\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Ken Kopelson",
-            "email": "ken.kopelson@headwaterco.com"
-        }
-    ],
-    "require": {}
-}
+      "psr-4": {
+        "App\\": "src/"
+      }
+    }
+  }
